--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,10 @@
   @apply font-extrabold text-4xl text-black
 }
 
+.heading-large {
+  @apply font-extrabold text-3xl text-black
+}
+
 .body-normal {
   @apply font-normal text-base text-black
 }
