adjust css configs

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
 }
 
 .page-container {
-  @apply flex flex-col items-center justify-center pt-12
+  @apply flex flex-col items-center justify-center py-12
 }
 
 .heading-bold {
